Apply C# essentials and add a common file

--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
+    <Compile Include="Verifiers\ContractCodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
     <Compile Include="Helpers\CodeFixVerifier.Helper.cs" />
     <Compile Include="Helpers\DiagnosticResult.cs" />
