--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -104,6 +104,9 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="DataSource\DoNotAllowMarkingPrivateAndProtected\Source.cs" />
+    <None Include="DataSource\Accessibility\NewSource.cs" />
+    <None Include="DataSource\Accessibility\Source.cs" />
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
     <Compile Include="Verifiers\ContractCodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
@@ -117,6 +120,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Mixins.Annotations\Mixins.Annotations.csproj">
+      <Project>{9d4240b3-f7a7-4edc-a1be-b83309b8c2fb}</Project>
+      <Name>Mixins.Annotations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Mixins\Mixins.csproj">
+      <Project>{69daa05a-5802-4f9c-9b7a-2e5698190597}</Project>
+      <Name>Mixins</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MixinGenerator\MixinGenerator.csproj">
       <Project>{B410D33F-D9F6-4591-933C-FF59E328AE9D}</Project>
       <Name>MixinGenerator</Name>
