--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="DataSource\LazyMixin\NewSource.cs" />
+    <None Include="DataSource\LazyMixin\Source.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
