--- a/MixinGenerator/Mixins.Annotations/Mixins.Annotations.csproj
+++ b/MixinGenerator/Mixins.Annotations/Mixins.Annotations.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ProtectedAttribute.cs" />
     <Compile Include="PrivateAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThisAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
