--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -104,13 +104,13 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DataSource\DoNotAllowMarkingPrivateAndProtected\Source.cs" />
-    <None Include="DataSource\Accessibility\NewSource.cs" />
-    <None Include="DataSource\Accessibility\Source.cs" />
-    <None Include="DataSource\NotifyPropertyChangedMixin\NewSource.cs" />
-    <None Include="DataSource\NotifyPropertyChangedMixin\Source.cs" />
-    <None Include="DataSource\CompositeDisposableMixin\NewSource.cs" />
-    <None Include="DataSource\CompositeDisposableMixin\Source.cs" />
+    <None Include="DataSource\UsageTest\DoNotAllowMarkingPrivateAndProtected\Source.cs" />
+    <None Include="DataSource\UsageTest\Accessibility\NewSource.cs" />
+    <None Include="DataSource\UsageTest\Accessibility\Source.cs" />
+    <None Include="DataSource\MixinsTest\NotifyPropertyChangedMixin\NewSource.cs" />
+    <None Include="DataSource\MixinsTest\NotifyPropertyChangedMixin\Source.cs" />
+    <None Include="DataSource\MixinsTest\CompositeDisposableMixin\NewSource.cs" />
+    <None Include="DataSource\MixinsTest\CompositeDisposableMixin\Source.cs" />
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
     <Compile Include="Verifiers\ContractCodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
@@ -121,8 +121,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DataSource\LazyMixin\NewSource.cs" />
-    <None Include="DataSource\LazyMixin\Source.cs" />
+    <None Include="DataSource\MixinsTest\LazyMixin\NewSource.cs" />
+    <None Include="DataSource\MixinsTest\LazyMixin\Source.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
