--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -104,6 +104,11 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="DataSource\MixinsTest\CompositeDisposableMixin\Results.csv" />
+    <None Include="DataSource\MixinsTest\LazyMixin\Results.csv" />
+    <None Include="DataSource\MixinsTest\NotifyPropertyChangedMixin\Results.csv" />
+    <None Include="DataSource\UsageTest\Accessibility\Results.csv" />
+    <None Include="DataSource\UsageTest\DoNotMarkAsBothPrivateAndProtected\Results.csv" />
     <None Include="DataSource\UsageTest\DoNotMarkAsBothPrivateAndProtected\Source.cs" />
     <None Include="DataSource\UsageTest\Accessibility\NewSource.cs" />
     <None Include="DataSource\UsageTest\Accessibility\Source.cs" />
@@ -111,17 +116,22 @@
     <None Include="DataSource\MixinsTest\NotifyPropertyChangedMixin\Source.cs" />
     <None Include="DataSource\MixinsTest\CompositeDisposableMixin\NewSource.cs" />
     <None Include="DataSource\MixinsTest\CompositeDisposableMixin\Source.cs" />
+    <None Include="DataSource\UsageTest\DoNotUseAssignment\Results.csv" />
+    <None Include="DataSource\UsageTest\DoNotUseProperty\Results.csv" />
     <None Include="DataSource\UsageTest\DoNotUseProperty\Source.cs" />
+    <None Include="DataSource\UsageTest\DoNotUseReadOnlyField\Results.csv" />
     <None Include="DataSource\UsageTest\DoNotUseReadOnlyField\Source.cs" />
     <None Include="DataSource\UsageTest\DoNotUseAssignment\Source.cs" />
+    <None Include="DataSource\UsageTest\MergeableMethodMustBeVoid\Results.csv" />
     <None Include="DataSource\UsageTest\MergeableMethodMustBeVoid\Source.cs" />
+    <Compile Include="MixinsTest.cs" />
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
     <Compile Include="Verifiers\ContractCodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
     <Compile Include="Helpers\CodeFixVerifier.Helper.cs" />
     <Compile Include="Helpers\DiagnosticResult.cs" />
     <Compile Include="Helpers\DiagnosticVerifier.Helper.cs" />
-    <Compile Include="UnitTests.cs" />
+    <Compile Include="UsageTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +152,9 @@
       <Project>{B410D33F-D9F6-4591-933C-FF59E328AE9D}</Project>
       <Name>MixinGenerator</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
