--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -108,12 +108,12 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DataSource\MixinsTest\CompositeDisposableMixin\Results.csv" />
-    <None Include="DataSource\MixinsTest\LazyMixin\Results.csv" />
-    <None Include="DataSource\MixinsTest\NotifyPropertyChangedMixin\Results.csv" />
+    <None Include="DataSource\MixinsTest\CompositeDisposableMixin\Results.json" />
+    <None Include="DataSource\MixinsTest\LazyMixin\Results.json" />
+    <None Include="DataSource\MixinsTest\NotifyPropertyChangedMixin\Results.json" />
     <None Include="DataSource\result-schema.json" />
-    <None Include="DataSource\UsageTest\Accessibility\Results.csv" />
-    <None Include="DataSource\UsageTest\DoNotMarkAsBothPrivateAndProtected\Results.csv" />
+    <None Include="DataSource\UsageTest\Accessibility\Results.json" />
+    <None Include="DataSource\UsageTest\DoNotMarkAsBothPrivateAndProtected\Results.json" />
     <None Include="DataSource\UsageTest\DoNotMarkAsBothPrivateAndProtected\Source.cs" />
     <None Include="DataSource\UsageTest\Accessibility\NewSource.cs" />
     <None Include="DataSource\UsageTest\Accessibility\Source.cs" />
@@ -121,13 +121,13 @@
     <None Include="DataSource\MixinsTest\NotifyPropertyChangedMixin\Source.cs" />
     <None Include="DataSource\MixinsTest\CompositeDisposableMixin\NewSource.cs" />
     <None Include="DataSource\MixinsTest\CompositeDisposableMixin\Source.cs" />
-    <None Include="DataSource\UsageTest\DoNotUseAssignment\Results.csv" />
-    <None Include="DataSource\UsageTest\DoNotUseProperty\Results.csv" />
+    <None Include="DataSource\UsageTest\DoNotUseAssignment\Results.json" />
+    <None Include="DataSource\UsageTest\DoNotUseProperty\Results.json" />
     <None Include="DataSource\UsageTest\DoNotUseProperty\Source.cs" />
-    <None Include="DataSource\UsageTest\DoNotUseReadOnlyField\Results.csv" />
+    <None Include="DataSource\UsageTest\DoNotUseReadOnlyField\Results.json" />
     <None Include="DataSource\UsageTest\DoNotUseReadOnlyField\Source.cs" />
     <None Include="DataSource\UsageTest\DoNotUseAssignment\Source.cs" />
-    <None Include="DataSource\UsageTest\MergeableMethodMustBeVoid\Results.csv" />
+    <None Include="DataSource\UsageTest\MergeableMethodMustBeVoid\Results.json" />
     <None Include="DataSource\UsageTest\MergeableMethodMustBeVoid\Source.cs" />
     <Compile Include="MixinsTest.cs" />
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
