--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -16,6 +16,6 @@
     <ProjectReference Include="..\MixinGenerator\MixinGenerator.csproj" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties DataSource_4MixinGeneratorUnitTests_4LowercaseLetters_4Diagnostic_4Results_1json__JSONSchema="result-schama-v2" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
