--- a/MixinGenerator/MixinGenerator.Mixins/MixinGenerator.Mixins.csproj
+++ b/MixinGenerator/MixinGenerator.Mixins/MixinGenerator.Mixins.csproj
@@ -11,16 +11,17 @@
     <RepositoryUrl>https://github.com/ufcpp/MixinGenerator/</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>common mixins for MixinGenerator</Description>
-    <PackageReleaseNotes>initial release.</PackageReleaseNotes>
+    <PackageReleaseNotes>make mixins non-copyable</PackageReleaseNotes>
     <PackageTags>Mixin, analyzer, code fix, source generator, INotifyPropertyChanged</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
-    <Version>0.1.0</Version>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.1</Version>
+    <AssemblyVersion>0.1.1.0</AssemblyVersion>
+    <FileVersion>0.1.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MixinGenerator" Version="0.1.0" />
+    <PackageReference Include="NonCopyableAnalyzer" Version="0.3.0" />
   </ItemGroup>
 
 </Project>
