replace generated member names to field name

--- a/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
+++ b/MixinGenerator/MixinGenerator/MixinGenerator.Test/MixinGenerator.Test.csproj
@@ -13,7 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\MixinGenerator.Mixins\MixinGenerator.Mixins.csproj" />
     <ProjectReference Include="..\MixinGenerator\MixinGenerator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TestTypes\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
